--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mikratherm Pro Kft.</title>
+    <title>Mikratherm Pro Kft. - Gépi földmunka Miskolc, tereprendezés</title>
+
+    <meta name="description"
+        content="Minőségi gépekkel végzett gépi földmunka Miskolcon, tereprendezés, épületek elbontása, generálkivitelezés.">
+    <meta name="theme-color" content="#002036">
+    <meta name="robots" content="index">
+    <meta name="robots" content="follow">
 
     <link rel="preload" href="/fonts/Manrope-Regular.woff2" as="font" type="font/woff2" crossorigin="">
     <link rel="preload" href="/fonts/Manrope-Medium.woff2" as="font" type="font/woff2" crossorigin="">
@@ -337,7 +343,7 @@
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                             <div class="row">
-                                <div class="col-11 col-lg-6 mx-auto">
+                                <div class="col-11 col-lg-6 mx-auto machine-img-container">
                                     <img src="/image/carousel/machines/slider-1.jpg" class="machine-img w-100 h-100"
                                         alt="slider 1">
                                 </div>
@@ -352,12 +358,13 @@
                                             és nagy kapacitású rakodókanállal rendelkezik, ami lehetővé teszi a 100
                                             köbméter rakodást naponta. Gépkezelővel együtt bérelhető.
                                         </p>
-                                        <div class="d-flex justify-content-between">
+                                        <div class="d-flex justify-content-between flex-wrap">
                                             <p>Gépi földmunka Miskolcon</p>
-                                            <p>már <b>9 490 Ft-tól</b></p>
+                                            <p>már <b>9490 Ft-tól</b></p>
                                         </div>
                                         <div>
-                                            <a href="#contact" class="btn contact-button brown initially-hidden">Kapcsolat</a>
+                                            <a href="#contact"
+                                                class="btn contact-button brown initially-hidden">Kapcsolat</a>
                                         </div>
                                     </div>
                                 </div>
@@ -365,27 +372,27 @@
                         </div>
                         <div class="carousel-item">
                             <div class="row">
-                                <div class="col-11 col-lg-6 mx-auto">
+                                <div class="col-11 col-lg-6 mx-auto machine-img-container">
                                     <img src="/image/carousel/machines/slider-2.jpg" class="machine-img w-100 h-100"
-                                        alt="slider 2">
+                                        alt="slider 1">
                                 </div>
                                 <div class="col-12 col-lg-6">
                                     <div class="p-5 machine-description white">
-                                        <h3 class="mb-3">LiuGong 777A kotró-rakodó gép</h3>
+                                        <h3 class="mb-3">Sunward SWE 30UB gumihevederes forgó kot</h3>
                                         <p class="mb-3">
-                                            A LiuGong 777A kotró-rakodó gép az egyik legkiválóbb választás
-                                            azoknak, akik hatékony, erős és megbízható gépre vágynak 200m+ telkek
-                                            kiépítésére. Az erős, ám kényelmesen kezelhető gép ideális megoldás nagyobb
-                                            területek (pl. csarnokok) kiépítésére. A LiuGong 777A gép erőteljes motorral
-                                            és nagy kapacitású rakodókanállal rendelkezik, ami lehetővé teszi a 100
-                                            köbméter rakodást naponta. Gépkezelővel együtt bérelhető.
+                                            Az SWE 30UB gumihevederes forgó kotrógép kombinálja a kompakt méretet a nagy
+                                            teljesítménnyel. A robosztus és tartós szerkezetnek köszönhetően ellenálló a
+                                            nehéz terhekkel szemben, és könnyedén megbirkózik a különböző
+                                            talajviszonyokkal. A gumihevederes hajtás biztosítja a kiváló tapadást és
+                                            manőverezhetőséget bármilyen terepen.
                                         </p>
                                         <div class="d-flex justify-content-between">
-                                            <p>Gépi földmunka Miskolcon</p>
-                                            <p>már <b>9 490 Ft-tól</b></p>
+                                            <p>Gép árokásás Miskolc</p>
+                                            <p>már <b>9000 Ft-tól</b></p>
                                         </div>
                                         <div>
-                                            <a href="#contact" class="btn contact-button brown initially-hidden">Kapcsolat</a>
+                                            <a href="#contact"
+                                                class="btn contact-button brown initially-hidden">Kapcsolat</a>
                                         </div>
                                     </div>
                                 </div>
@@ -414,7 +421,7 @@
                             <p class="title mb-2 mb-md-4 mt-3 mt-md-0">
                                 Cégünkről
                             </p>
-                            <h2 class="mb-5">
+                            <h2 class="mb-3 mb-lg-5">
                                 Mikratherm-Pro Földmunka Miskolc
                             </h2>
                             <p>
@@ -460,17 +467,19 @@
                     Hogyan dolgozunk?
                 </h2>
                 <div class="d-flex justify-content-start justify-content-md-center mb-2 mb-lg-5 overflow-auto">
-                    <button id="workflow-0" class="workflow-btn dark-brown initially-hidden" onclick="changeWorkflow(this.id)" value="0"
-                        data-target="#workflowCarousel" data-slide-to="0" aria-current="true" aria-label="Slide 1"
-                        type="button">
+                    <button id="workflow-0" class="workflow-btn dark-brown initially-hidden"
+                        onclick="changeWorkflow(this.id)" value="0" data-target="#workflowCarousel" data-slide-to="0"
+                        aria-current="true" aria-label="Slide 1" type="button">
                         1.&nbsp;Kapcsolatfelvétel
                     </button>
-                    <button id="workflow-1" class="workflow-btn white initially-hidden" onclick="changeWorkflow(this.id)" value="1"
-                        data-target="#workflowCarousel" data-slide-to="1" aria-label="Slide 2" type="button">
+                    <button id="workflow-1" class="workflow-btn white initially-hidden"
+                        onclick="changeWorkflow(this.id)" value="1" data-target="#workflowCarousel" data-slide-to="1"
+                        aria-label="Slide 2" type="button">
                         2.&nbsp;Árajánlat&nbsp;küldése
                     </button>
-                    <button id="workflow-2" class="workflow-btn white initially-hidden" onclick="changeWorkflow(this.id)" value="2"
-                        data-target="#workflowCarousel" data-slide-to="2" aria-label="Slide 3" type="button">
+                    <button id="workflow-2" class="workflow-btn white initially-hidden"
+                        onclick="changeWorkflow(this.id)" value="2" data-target="#workflowCarousel" data-slide-to="2"
+                        aria-label="Slide 3" type="button">
                         3.&nbsp;Munka&nbsp;megkezdése
                     </button>
                 </div>
@@ -485,12 +494,14 @@
                                 </div>
 
                                 <div class="col-12 col-lg-6">
-                                    <div class="p-5 white h-100">
+                                    <div class="p-5 white h-100 workflow-container">
                                         <h3 class="mt-4 mb-3">Kapcsolatfelvétel</h3>
-                                        <p>
+                                        <p class="mb-5">
                                             A telefonos megkeresését követően 24 órán belül felvesszük Önnel a
                                             kapcsolatot, egyeztetünk egy időpontot felmérésre.
                                         </p>
+                                        <a href="#contact"
+                                            class="btn contact-button dark-brown initially-hidden">Árajánlat</a>
                                     </div>
                                 </div>
                             </div>
@@ -503,12 +514,14 @@
                                 </div>
 
                                 <div class="col-12 col-lg-6">
-                                    <div class="p-5 white h-100">
+                                    <div class="p-5 white h-100 workflow-container">
                                         <h3 class="mt-4 mb-3">Árajánlat&nbsp;küldése</h3>
                                         <p>
                                             A felmérést követően részletes árajánlatot küldünk e-mailen, amely minden
                                             fontos információt tartalmaz, amely a munka megkezdéséhez szükséges.
                                         </p>
+                                        <a href="#contact"
+                                            class="btn contact-button dark-brown initially-hidden">Árajánlat</a>
                                     </div>
                                 </div>
                             </div>
@@ -521,12 +534,14 @@
                                 </div>
 
                                 <div class="col-12 col-lg-6">
-                                    <div class="p-5 white h-100">
+                                    <div class="p-5 white h-100 workflow-container">
                                         <h3 class="mt-4 mb-3">Munka&nbsp;megkezdése</h3>
-                                        <p>
+                                        <p class="mb-5">
                                             Az ajánlat elfogadását követően átbeszéljük a helyszínen a
                                             munkafolyamatokat, és elkezdjük a munkát.
                                         </p>
+                                        <a href="#contact"
+                                            class="btn contact-button dark-brown initially-hidden">Árajánlat</a>
                                     </div>
                                 </div>
                             </div>
@@ -549,24 +564,35 @@
             <div class="container-fluid">
                 <div class="row gallery-container">
                     <div class="col-10 col-md-5 col-lg-3">
-                        <img src="./image/carousel/gallery/slider-1.png" class="img-fluid w-100 h-100 gallery-img"
-                            alt="slider-1">
+                        <a href="./image/carousel/gallery/slider-1.jpg">
+                            <img src="./image/carousel/gallery/slider-1.jpg" class="img-fluid w-100 h-100 gallery-img"
+                                alt="slider-1">
+                        </a>
+
                     </div>
                     <div class="col-10 col-md-5 col-lg-3">
-                        <img src="./image/carousel/gallery/slider-2.png" class="img-fluid w-100 h-100 gallery-img"
-                            alt="slider-2">
+                        <a href="./image/carousel/gallery/slider-2.jpg">
+                            <img src="./image/carousel/gallery/slider-2.jpg" class="img-fluid w-100 h-100 gallery-img"
+                                alt="slider-2">
+                        </a>
                     </div>
                     <div class="col-10 col-md-5 col-lg-3">
-                        <img src="./image/carousel/gallery/slider-3.png" class="img-fluid w-100 h-100 gallery-img"
-                            alt="slider-3">
+                        <a href="./image/carousel/gallery/slider-3.jpg">
+                            <img src="./image/carousel/gallery/slider-3.jpg" class="img-fluid w-100 h-100 gallery-img"
+                                alt="slider-3">
+                        </a>
                     </div>
                     <div class="col-10 col-md-5 col-lg-3">
-                        <img src="./image/carousel/gallery/slider-4.png" class="img-fluid w-100 h-100 gallery-img"
-                            alt="slider-4">
+                        <a href="./image/carousel/gallery/slider-4.jpg">
+                            <img src="./image/carousel/gallery/slider-4.jpg" class="img-fluid w-100 h-100 gallery-img"
+                                alt="slider-4">
+                        </a>
                     </div>
                     <div class="col-10 col-md-5 col-lg-3">
-                        <img src="./image/carousel/gallery/slider-4.png" class="img-fluid w-100 h-100 gallery-img"
-                            alt="slider-4">
+                        <a href="./image/carousel/gallery/slider-5.jpg">
+                            <img src="./image/carousel/gallery/slider-5.jpg" class="img-fluid w-100 h-100 gallery-img"
+                                alt="slider-5">
+                        </a>
                     </div>
                 </div>
             </div>
@@ -709,9 +735,10 @@
                 <div class="d-none d-md-flex align-items-center justify-content-center flex-wrap">
                     <a href="tel:+36202588888" class="mb-1 mb-lg-2 py-1 p-md-1 mr-5 black-text initially-hidden">
                         <i class="fa-solid fa-phone mr-1 brown-text"></i>
-                        Krajnyik Bence +36 20 258 88 88
+                        Krajnyik Bence +36 20 258 8888
                     </a>
-                    <a href="mailto:bence.krajnyik@gmail.com" class="mb-1 mb-lg-2 py-1 p-md-1 mr-5 black-text initially-hidden">
+                    <a href="mailto:bence.krajnyik@gmail.com"
+                        class="mb-1 mb-lg-2 py-1 p-md-1 mr-5 black-text initially-hidden">
                         <i class="fa-solid fa-envelope mr-1 brown-text"></i>
                         E-mail: bence.krajnyik@gmail.com
                     </a>
@@ -722,7 +749,7 @@
                 </div>
                 <hr class="my-lg-4">
             </div>
-           
+
             <p class="text-center mt-4">Copyright © <span id="year"></span> Mikatherm Kft. Minden jog fenntartva</p>
             <p class="text-center">
                 Az oldalt a
@@ -732,11 +759,11 @@
         </div>
     </footer>
 
+    <script src="./js/baguettebox/baguetteBox.min.js"></script>
     <script src="./js/site/scripts.js"></script>
     <script src="./js/bootstrap/jquery-3.5.1.min.js"></script>
     <script src="./js/bootstrap/popper.min.js"></script>
     <script src="./js/bootstrap/bootstrap.min.js"></script>
-    <script src="./js/baguettebox/baguetteBox.min.js"></script>
 </body>
 
 </html>
